Solved some DOM Questions

--- a/DOM P9/DOM P9/index.html
+++ b/DOM P9/DOM P9/index.html
@@ -39,5 +39,9 @@
       </div>
     </div>
     <span class="title"></span>
+    <script>
+        const ele = document.querySelector('h1');
+        ele.style.color = "red";
+    </script>
   </body>
 </html>
