--- a/06_DOM Project/06_DOM Project/index.html
+++ b/06_DOM Project/06_DOM Project/index.html
@@ -63,6 +63,8 @@
     </footer>
   </main>
 
+  <script src="./script.js"></script>
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </body>
