--- a/DOM P7/DOM P7/index.html
+++ b/DOM P7/DOM P7/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./index.js" async defer></script>
     <title>Dom Assignment 5</title>
   </head>
   <body>
@@ -71,5 +70,7 @@
         </div>
       </section>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
